compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/erasure/nullableType.kt
// FIR_IDENTICAL
// !DIAGNOSTICS: -UNUSED_PARAMETER

<!CONFLICTING_JVM_DECLARATIONS!>fun foo(x: String) {}<!>
<!CONFLICTING_JVM_DECLARATIONS!>fun foo(x: String?) {}<!>
